# scorecard_analysis

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  interaction_pipeline.py  pipeline.py  pyproject.toml  requirements.txt  scorecard_development.ipynb  scorecard_development_guide.md  scorecard_exploration.ipynb  stakeholder_evidence.py
comparison/: __init__.py  model_comparison.py
data/: extractor.py
data/sql/: combined_data.sql  customer_data.sql  deal_data.sql  monitoring_data.sql
modelling/: deal_variable_analysis.py  deal_variable_plots.py  interaction_model.py  logistic_model.py  model_comparison.py  scorecard_scaler.py
preprocessing/: binning.py
reporting/: stratification_table.py
testing/: statistical_tests.py
tests/: __init__.py  test_binning.py  test_comparison.py  test_imports.py  test_interaction_pipeline.py  test_model_comparison.py  test_scorecard_scaler.py
validation/: metrics.py
