[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scorecard-analysis"
version = "0.1.0"
description = "Credit risk scorecard development toolkit with interaction-model support."
readme = "scorecard_development_guide.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pyodbc>=4.0.39",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
py-modules = [
    "pipeline",
    "interaction_pipeline",
    "stakeholder_evidence",
]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "data",
    "modelling",
    "preprocessing",
    "reporting",
    "testing",
    "validation",
]

[tool.setuptools.package-data]
data = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

